loopfor.LoopFor.scala.error
Compilation error:
LoopFor:3: error: reassignment to val
    stepper1 = stepper1 + 1
             ^